<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@drawable/scrollbar"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintRadioGroup"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.15"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7">

                        <RadioGroup
                            android:id="@+id/radioGroupSonidos"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioButton
                                android:id="@+id/radioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tono1"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tono2"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tono3"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tono4"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tono5"
                                android:textSize="18sp" />

                        </RadioGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/cambiarSonido"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textAllCaps="true" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/elegirSonido"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintRadioGroup">

                        <Button
                            android:id="@+id/botonNo"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginLeft="20dp"

                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_button3"
                            android:insetBottom="0dp"
                            android:text="@string/cancelar"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:backgroundTint="@color/grisClaro"

                            />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/botonSi2"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"

                            android:layout_marginBottom="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_button3"
                            android:insetBottom="0dp"
                            android:text="@string/aceptar"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:backgroundTint="@color/verdeOrderSuperfast" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgPlaySonido"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:background="@drawable/borde"
                        android:rotation="90"
                        app:layout_constraintBottom_toBottomOf="@+id/constraintRadioGroup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/constraintRadioGroup"
                        app:layout_constraintTop_toTopOf="@+id/constraintRadioGroup"
                        app:srcCompat="@drawable/arrowup_foreground" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>