<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgBackCancelar"
                        android:layout_width="40dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="3dp"

                        android:padding="3dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/constraintLayout40"
                        app:layout_constraintTop_toTopOf="@+id/textView6"
                        app:srcCompat="@drawable/back_white"
                        app:tint="@color/black" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout40"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RadioGroup
                        android:id="@+id/radioGroupCancelar"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/motivoCancelar1"
                            android:layout_marginTop="8dp"

                            android:theme="@style/SCBSwitch"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/motivoCancelar2"
                            android:layout_marginTop="8dp"

                            android:theme="@style/SCBSwitch"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/motivoCancelar3"
                            android:layout_marginTop="8dp"
                            android:theme="@style/SCBSwitch"
                            android:textSize="18sp" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="45dp"
                        android:text="@string/cancelarPedido"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/constraintLayout40"
                        app:layout_constraintStart_toStartOf="@+id/constraintLayout40"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textAllCaps="true" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/cancelacion"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/constraintLayout40"
                        app:layout_constraintStart_toStartOf="@+id/constraintLayout40"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout40" />

                    <Button
                        android:id="@+id/botonCancelarSi"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button3"
                        android:insetBottom="0dp"

                        android:text="@string/cancelar"
                        android:textColor="@color/grisClaroSuave"

                        android:textSize="@dimen/text_size_medium2_takeAway"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:backgroundTint="@color/black_overlay"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroupCancelar"
                        app:layout_constraintWidth_percent="0.4" />

                    <LinearLayout
                        android:id="@+id/linearLayout18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroupCancelar">

                        <Button
                            android:id="@+id/botonCancelarNo"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_button3"
                            android:insetBottom="0dp"
                            android:text="@string/atras"
                            android:textColor="@color/black"

                            android:textSize="@dimen/text_size_medium2_takeAway"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:backgroundTint="@color/grisClaro"

                            />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>